Fix back button z-index

--- a/cat-breeds-nextjs/src/styles/components/_button.scss
+++ b/cat-breeds-nextjs/src/styles/components/_button.scss
@@ -58,6 +58,7 @@
     min-width: initial;
     background-color: $color-2;
     color: $color-6 !important;
+    z-index: 20;
 
     &:hover {
       color: $color-2 !important;
